2002-08-28  Richard Williamson (Local)  <rjw@apple.com>

        Fixed outline of for active link style.
        
        * khtml/css/html4.css:
        * kwq/KWQPainter.mm:
        (QPainter::drawLine):

2002-08-28  David Hyatt  <hyatt@apple.com>

	Adding knowledge to the style system of auto z-indices.  The old
	code doesn't use this yet, but the new layering code will.

	Also wrote the ztree construction function (not used yet) and
	stubbed out the display list flattening routines.
	
        * khtml/rendering/render_layer.cpp:
        (RenderLayer::convertToLayerCoords):
        (RenderLayer::constructZTree):
        (RenderLayer::constructLayerList):
        * khtml/rendering/render_layer.h:
        * khtml/rendering/render_style.cpp:
        (StyleBoxData::StyleBoxData):
        * khtml/rendering/render_style.h:

2002-08-28  Darin Adler  <darin@apple.com>

	- fixed 2977587 -- JavaScript code that reads the values of text areas
	misses the last line if no trailing CR

        * kwq/KWQTextArea.mm: (-[KWQTextArea paragraphs]):

2002-08-28  David Hyatt  <hyatt@apple.com>

	Putting design notes and API details for the layering system
	into the header file.
	
        * khtml/rendering/render_layer.h:

2002-08-28  Darin Adler  <darin@apple.com>

        * kwq/mac-encodings.txt: Sort all the character set names alphabetically, and use all lower case.
        * kwq/make-charset-table.pl: Require lower-case sorted lists of character set names.

2002-08-28  Darin Adler  <darin@apple.com>

	- fixed 3032148 -- Button not disabled in page

        * kwq/KWQWidget.mm: (QWidget::setEnabled): Call setEnabled:
	on the NSView if it implements it.

2002-08-28  Darin Adler  <darin@apple.com>

	- fixed 3030212 -- Problems rendering pages that specify "x-mac-roman" character
	set (like our Danish help pages)

        * kwq/mac-encodings.txt: Added x-mac-roman as an alias for macintosh.

2002-08-27  Darin Adler  <darin@apple.com>
